--- a/show.html
+++ b/show.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,8 +54,8 @@
     </div>
 </div>
 
-<div class="div-d"><h1 class="details-drama">?רוצים פרטים על ההופעה </h1>
-<a href="tel:+972-50-123-4567" class="phone-call">התקשרו אלינו
+<div class="div-d"><h1 class="details-drama">רוצים פרטים על ההופעה? </h1>
+<a href="tel:+972-54-300-8020" class="phone-call">התקשרו אלינו
     <i class="fa-solid fa-phone"></i>
 </a></div>
 
