--- a/index.html
+++ b/index.html
@@ -63,8 +63,15 @@
        <div class="word-wrapper">
         <h1 class="balloon-text">
 
-              <span class="letter-wrapper">ו<div class="ball"></div></span>יעק<span class="letter-wrapper">ו<div class="ball2"></div></span>ביק
-        
+              <!-- <span class="letter-wrapper">ו<div class="ball"></div></span>יעק<span class="letter-wrapper">ו<div class="ball2"></div></span>ביק -->
+                      <span class="letter-wrapper">על הבמה</span>
+
+</h1>
+
+<h1 class="balloon-text1">
+
+                       <span class="letter-wrapper1">כל ילד כ<span class="letter-wrapper">ו<div class="ball2">⭐</div></span>כב</span>
+
 </h1>
        
          <h1 class="sec-title">חוגי דרמה ובמה • הפעלות לימי הולדת • מופע על הבמה</h1>
@@ -78,7 +85,7 @@
 
 
 <div class="about-box" id="aboutBox">
-    <h2 class="hebrw">שמי יעקב(יעקוביקו) - שחקן, יוצר ומדריך דרמה וקרקס לגני ילדים.</h2>
+    <h2 class="hebrw">שמי יעקב - שחקן, יוצר ומדריך דרמה וקרקס לגני ילדים.</h2>
     <p class="hebrw ss">
        במה, דמיון ומשחק הם הדרך שלי להתחבר לילדים ולעזור להם להרגיש חופשיים, מצחיקים, אמיצים ובעיקר — עצמם.
 
