--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans+Hebrew:wght@400;700&display=swap" rel="stylesheet">
        <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans+Hebrew:opsz,wght@8..144,100..800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Suez+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
-<link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
 <body> 
     <a href="https://wa.me/972543008020" target="_blank" class="whatsapp-icon">
@@ -54,8 +58,8 @@
   <button class="menu-btn" onclick="toggleMenu()">☰</button>
     
   <div class="menu-content" id="menuContent">
-      <button onclick="openTestimonial()">המלצות</button>
-      <button onclick="openBox()">קצת עליי</button>
+      <button class="fontt" onclick="openTestimonial()">המלצות</button>
+      <button class="fontt" onclick="openBox()">קצת עליי</button>
   </div>
 </div>
 
@@ -64,7 +68,9 @@
         <h1 class="balloon-text">
 
               <!-- <span class="letter-wrapper">ו<div class="ball"></div></span>יעק<span class="letter-wrapper">ו<div class="ball2"></div></span>ביק -->
-                      <span class="letter-wrapper">על הבמה</span>
+                      <span class="letter-wrapperr">עַל</span>
+                      <br>
+                      <span class="letter-wrapper2">הַבָּמָה</span>
 
 </h1>
 
@@ -75,7 +81,6 @@
 </h1>
        
          <h1 class="sec-title">חוגי דרמה ובמה • הפעלות לימי הולדת • מופע על הבמה</h1>
-         <h2 class="sec-title-1">חוויה של יצירה , צחוק ותנועה שמעצימה כל ילד !</h1>
     </div>
 
 
