--- a/index.html
+++ b/index.html
@@ -65,22 +65,7 @@
 
        <h2 class="rtl">בס"ד</h2>
        <div class="word-wrapper">
-        <h1 class="balloon-text">
-
-              <!-- <span class="letter-wrapper">ו<div class="ball"></div></span>יעק<span class="letter-wrapper">ו<div class="ball2"></div></span>ביק -->
-                      <span class="letter-wrapperr">עַל</span>
-                      <br>
-                      <span class="letter-wrapper2">הַבָּמָה</span>
-
-</h1>
-
-<h1 class="balloon-text1">
-
-                       <span class="letter-wrapper1">כל ילד כ<span class="letter-wrapper">ו<div class="ball2">⭐</div></span>כב</span>
-
-</h1>
-       
-         <h1 class="sec-title">חוגי דרמה ובמה • הפעלות לימי הולדת • מופע על הבמה</h1>
+       <img src="bam.png" alt="לוגו יעקוביקו" class="logo-img">
     </div>
 
 
